# fastapi-novo

./: README.md  pyproject.toml
fast_oficina/: app.py
